--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -4989,7 +4989,7 @@ tbody.collapse.in {
 .navbar-nav,
 #topnav #topnav-content #topnav-functions,
 #topnav #topnav-content #topnav-settings {
-  margin: 14.5px -15px;
+  margin: 12px 5px;
 }
 .navbar-nav > li > a,
 #topnav #topnav-content #topnav-functions > li > a,
@@ -8032,7 +8032,7 @@ section[id^="home-"] h2 {
   font-weight: bold;
   font-size: 3.0em;
   line-height: 0.9em;
-  color: #000;
+  color: #691D99;
 }
 section[id^="home-"] .page-header {
   position: static !important;
@@ -8108,10 +8108,10 @@ section[id^="home-"] .continue:hover {
   font-size: 20px;
   line-height: 40px;
   background: none;
-  background: rgba(99,180,0,0.5);
+  background: rgba(255,215,0,0.5);
 }
 #home-intro .btn-lg:hover {
-  background: rgba(88,160,0,0.75);
+  background: rgba(255,215,0,0.75);
 }
 #home-problem {
   background: #000 url("../images/home/bangok.jpg");
@@ -8211,7 +8211,7 @@ section[id^="home-"] .continue:hover {
   margin-bottom: -10px;
 }
 #home-signup h2 {
-  color: #000;
+  color: #691D99;
 }
 #home-signup p {
   color: rgba(0,0,0,0.5);
@@ -8302,7 +8302,7 @@ section[id^="home-"] .continue:hover {
   color: #a64251;
 }
 #home-signup section.page-form .mc-field-group input {
-  border-color: #63b400;
+  border-color: #666;
 }
 #home-signup section.page-form .mc-field-group input.mce_inline_error {
   color: #a94442;
@@ -8329,7 +8329,7 @@ section[id^="home-"] .continue:hover {
   margin: 0 -1px;
 }
 #home-signup section.page-form #mc-embedded-subscribe {
-  background: #5eaa00;
+  background: #691D99;
 }
 #home-signup section.page-form #mc-embedded-subscribe:hover {
   background: #000;
@@ -8684,7 +8684,7 @@ section[id^="home-"] .continue:hover {
   background-color: transparent;
 }
 #topnav #topnav-content #topnav-settings {
-  margin-right: 0;
+  margin-right: -10px;
 }
 #topnav #topnav-content #topnav-settings > li > a:hover,
 #topnav #topnav-content #topnav-settings > li > a:focus,
@@ -16647,7 +16647,7 @@ input[type="submit"]:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 button:hover {
-  box-shadow: inset 0 0 0 2px #6ec800;
+  box-shadow: inset 0 0 0 2px #691D99;
   background-color: #fff;
   background: none;
   color: #000;
@@ -16655,7 +16655,7 @@ button:hover {
 .btn-primary,
 #table-invitations .row-invited .col-action button {
   box-shadow: none;
-  background: #6ec800;
+  background: #FFD700;
 }
 .btn-primary:hover,
 #table-invitations .row-invited .col-action button:hover {
@@ -16937,7 +16937,7 @@ a {
 }
 #app-footer nav ul li a#uv-feedback,
 #page-footer nav ul li a#uv-feedback {
-  background: #6ec800;
+  background: #691D99;
   color: #fff;
 }
 #app-footer nav ul li a#uv-feedback:hover,
